--- a/Desktop/job-research/채용공고(프론트).md
+++ b/Desktop/job-research/채용공고(프론트).md
@@ -105,3 +105,22 @@
   - Public Cloud를 운영 및 관리해본 경험자
   -  ASP.Net MVC를 사용해 본 경험자
   - MS-SQL 유경험자
+
+
+
+🏢**네이버제트**
+
+- 자격요건
+  - Java/Kotlin 및 Spring 기반 서비스 개발 경험이 3년 이상이신 분
+  - 서비스에 애정을 갖고 개발하며, 더 좋은 코드를 위해 함께 고민하는 것을 좋아하시는 분
+  - 최신 트렌드에 맞춰서 개발이 가능하신 분
+  - 페어프로그래밍, 코드리뷰 등에 거부감이 없으신 분
+- 우대사항
+  -  Docker / Kubernetes 환경에서 시스템 설계 및 운영 경험이 있는 분
+  - 다양한 개발언어, 환경에 적응이 빠르신 분
+  - 리눅스 환경 및 네트워크에 대한 전반적인 이해가 높으신 분
+  - AWS, AlibabaCloud, AZURE 등 Cloud 서비스 이용이 가능하신 분
+  - Kafka(Kafka Stream), Redis, ElasticSearch 사용 경험이 있는 분
+  - Spring WebFlux 개발 경험이 있는 분
+  - 대용량 서비스의 분산처리 서버 설계 및 개발 경험이 있는 분
+  - Web front-end에 대한 기본적인 지식이 있고, 협업이 가능하신 분
